Style the footer

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<div class="container-fluid footer bg-dark text-center">
+    <p>Copywrite &copy; 2022. All rights reserverd.</p>
+</div>
