Add git search content

--- a/src/app/component/github-search/github-search.component.html
+++ b/src/app/component/github-search/github-search.component.html
@@ -1,1 +1,18 @@
-<p>Github GithubSearch work</p>
+<div class="row searchSearch">
+    <div class="col.md-6">
+        
+    <h1 class="text-center">Find a github user here</h1>
+    <div class="container gitUsernameForm">
+        <form class="form-control search">
+            <div class="mb-3">
+                <label for="gitUsername" class="form-label">Enter your github username:</label>
+                <input type="text" class="form-control" id="gitUsername">
+            </div>
+        
+            <button type="submit" class="btn submit btn-outline-warning btn-lg">Search Now</button>
+        </form> 
+    </div>
+    </div>
+</div>
+
+
