--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <app-home></app-home>
 <app-github-search></app-github-search>
+<app-github-search-repo></app-github-search-repo>
 <app-footer></app-footer>
