Create a single serviceApi

--- a/src/app/component/github-search-repo/github-search-repo.component.html
+++ b/src/app/component/github-search-repo/github-search-repo.component.html
@@ -15,6 +15,16 @@
     </div>
 </div>
 
-
+<!-- <div class ="container">
+    <div class = "row">
+        <div class = "col-md-6" *ngFor ='let repo of repos'>
+            <hr>
+            <h3>{{repo.name}}</h3>
+            <p>{{repo.description}}</p>
+            <p>{{repo.created_at | date:'medium'}}</p>
+            <a class = "btn btn-info" href = {{repo.html_url}}>Go to Repo!</a>
+        </div>
+    </div>
+</div> -->
 
 
