--- a/src/app/component/github-search/github-search.component.html
+++ b/src/app/component/github-search/github-search.component.html
@@ -15,6 +15,19 @@
     </div>
 </div>
 
-
+<!-- <div class ="container">
+    <div class = "row">
+        <div class ="col-md-7">
+            <img id = "avatar" [src]='myProfile.avatar_url'>
+        </div>
+        <div class = "col-md-5">
+            <h3>Name: {{myProfile.name}}</h3><br>
+            <h4>Username: {{myProfile.login}}</h4>
+            <p>Bio: {{myProfile.bio}}</p>
+            <p>Followers: {{myProfile.followers}}</p>
+            <p>Following: {{myProfile.following}}</p>
+            <p>Account created on: {{myProfile.created_at |date:'medium'}}</p>
+        </div>
+    </div> -->
 
 
