--- a/src/app/component/github-search-repo/github-search-repo.component.html
+++ b/src/app/component/github-search-repo/github-search-repo.component.html
@@ -3,7 +3,7 @@
         
     <h1 class="text-center">Find github repository for a specific user</h1>
     <div class="container gitUsernameForm">
-        <form class="form-control search">
+        <form class="form-control search" #RepoForm='ngForm'>
             <div class="mb-3">
                 <label for="gitUsername" class="form-label">Enter github username:</label>
                 <input type="text" class="form-control" id="gitUsername">
