--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -6,14 +6,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
+                <li class="nav-item" routerLink="home">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Repo</a>
+                <li class="nav-item" routerLink="findUser">
+                    <a class="nav-link active" routerLink="findUsers" routerLinkActive='active'>User</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">FindOut</a>
+                    <a class="nav-link active" routerLink="findRepo" routerLinkActive='active'>Repo</a>
                 </li>          
             </ul>
         </div>
