--- a/src/app/component/github-search/github-search.component.html
+++ b/src/app/component/github-search/github-search.component.html
@@ -1,17 +1,33 @@
 <div class="row searchSearch">
     <div class="col.md-6">
         
-    <h1 class="text-center">Find a github user Details</h1>
-    <div class="container gitUsernameForm">
-        <form class="form-control search"  #UserForm='ngForm'>
-            <div class="mb-3">
-                <label for="gitUsername" class="form-label">Enter github username:</label>
-                <input type="text" class="form-control" id="gitUsername">
-            </div>
-        
-            <button type="submit" class="btn submit btn-outline-warning btn-lg">Search Now</button>
-        </form> 
+        <h1 class="text-center">Find a github user Details</h1>
+        <div class="container gitUsernameForm">
+            <form class="form-control search"  #UserForm='ngForm'>
+                <div class="mb-3">
+                    <label for="gitUsername" class="form-label">Enter github username:</label>
+                    <input type="text" class="form-control" id="gitUsername">
+                </div>
+            
+                <button type="submit" class="btn submit btn-outline-warning btn-lg">Search Now</button>
+            </form> 
+        </div>
     </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            <img src="{{user.avatar_url}}" alt="" class="avatar">
+        </div>
+        <div class="col-md-6">
+            <p><b>Name: </b>{{user.name}}</p>
+            <p><b>Username: </b>{{user.login}}</p>
+            <p><b>Following: </b>{{user.following}}</p>
+            <p><b>Followers: </b>{{user.followers}}</p>
+            <h3><b>Bio</b></h3>
+            <p>{{user.bio}}</p>
+        </div>
     </div>
 </div>
 
