--- a/src/app/component/github-search/github-search.component.html
+++ b/src/app/component/github-search/github-search.component.html
@@ -21,7 +21,7 @@
         <div class = "col-md-6">
             <h3>Name: {{userProfile.name}}</h3><br>
             <h4>Username: {{userProfile.login}}</h4>
-            <p>Bio: {{userProfile.bio}}</p>
+            <p appHighlight>Bio: {{userProfile.bio}}</p>
             <p>Followers: {{userProfile.followers}}</p>
             <p>Following: {{userProfile.following}}</p>
             <p>Account created: {{userProfile.created_at |dateAgo}}</p>
