--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -59,7 +59,7 @@
                     <p><b>Followers: </b>{{user.followers}}</p>
                 </div>
                 <h3><b>Bio</b></h3>
-                <p>{{user.bio}}</p>
+                <p appHighlight>{{user.bio}}</p>
                 <button class="btnGithubUrl btn btn-outline-warning"><a href="https://github.com/vionaosiako">Go to my Github</a></button>
                 
 
